Fix css on mobile.

--- a/interfaces/web_desktop/css/core.css
+++ b/interfaces/web_desktop/css/core.css
@@ -3352,6 +3352,13 @@ body.Offline #OfflineMessage
 	width: 40%;
 }
 
+[mobile] #OfflineMessage > div
+{
+	top: 20%;
+	left: 20%;
+	width: 60%;
+}
+
 #OfflineMessage > div:before
 {
 	font-size: 1.5em;
